overflow: visible to fix display issues on IE11

--- a/css/layout-css/agenda-style.upload.css
+++ b/css/layout-css/agenda-style.upload.css
@@ -274,7 +274,7 @@
 
 .agenda-list-item.open {
   border-radius: 0;
-  overflow: auto;
+  overflow: visible;
 }
 
 .agenda-list-item-content {
