--- a/css/layout-css/small-card-style.upload.css
+++ b/css/layout-css/small-card-style.upload.css
@@ -470,7 +470,7 @@
 }
 
 .small-card-list-item.open {
-  overflow: auto;
+  overflow: visible;
 }
 
 .small-card-list-image {
